# MirrorRust

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-28-mirrorrust-port.md
docs/superpowers/specs/: 2026-06-28-mirrorrust-port-design.md
specs/: Counter.tla
specs/traces/: violation.itf.json  violation1.itf.json  violation10.itf.json  violation11.itf.json  violation12.itf.json  violation13.itf.json  violation14.itf.json  violation15.itf.json  violation16.itf.json  violation17.itf.json  violation18.itf.json  violation19.itf.json  violation2.itf.json  violation20.itf.json  violation21.itf.json  violation22.itf.json  violation23.itf.json  violation24.itf.json  violation25.itf.json  violation26.itf.json  violation27.itf.json  violation28.itf.json  violation29.itf.json  violation3.itf.json  violation30.itf.json  violation31.itf.json  violation32.itf.json  violation33.itf.json  violation34.itf.json  violation35.itf.json  violation36.itf.json  violation4.itf.json  violation5.itf.json  violation6.itf.json  violation7.itf.json  violation8.itf.json  violation9.itf.json
src/: client.rs  lib.rs  protocol.rs  transport.rs
tests/: protocol.rs  smoke.rs
