[package]
name = "mirrorrust"
version = "1.0.0"
edition = "2021"
description = "Rust client for the ModelMirros protocol"
license = "ISC"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-traits = "0.2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
